coffee-shop/deployment/flagger/deployment.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: coffee-shop
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: coffee-shop
        version: v1
    spec:
      containers:
      - name: coffee-shop
        image: sdaschner/coffee-shop:quarkus-istio-ee-1
        ports:
        - containerPort: 8080
        readinessProbe:
          exec:
            command: ["sh", "-c", "curl -s http://localhost:8080/health | grep -q coffee-shop"]
      restartPolicy: Always
---
